added cara's email, fixed list implementation in html

--- a/email.html
+++ b/email.html
@@ -46,7 +46,7 @@
                 <div>
                     <p>Here are today's chores:</p>
                     <br>
-                    CHORE_LIST
+                    <ui>CHORE_LIST</ui>
                 </div>
                 <div>
                     <p>I hope you have a ADJECTIVE WEEKDAY!</p>
