Changed text alignment to left

--- a/email.html
+++ b/email.html
@@ -13,7 +13,7 @@
                 border: 5px outset;
                 padding: 2%;
                 font-family: "Lucidia Console", Courier, monospace;
-                text-align: center;
+                text-align: left;
                 word-wrap: normal;
             }
             .signature {
